Remove wrapping to fix print styles

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -227,7 +227,6 @@ section {
     @include leftColumn;
 
     h1, h2, h3, h4, h5, h6 {
-      white-space: nowrap;
       position: relative;
     }
 
